--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -67,7 +67,7 @@
                         <a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>
                         {% else %}
                         <p>You've been invited to a syndicate. Accept the invite now!</p>
-                        <a href="#" class="btn btn-primary">Accept Invite</a>
+                        <a href="dashboard/syndicate" class="btn btn-primary">Accept Invite</a>
                         {% endif %}
                     {% endif %}
                 {% else %}
