--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -1,12 +1,19 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Room Detail View</title>
-    <link rel="stylesheet" href="../../static/css/bootstrap.css">
+    <title>{{ room }} | Downing JCR RBS</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
+          media="all"/>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
+            type="text/javascript"></script>
 </head>
 <body>
 
@@ -34,14 +41,14 @@
         <div class="row">
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <h2>{{ room }}</h2>
-                {% if room.taken %}
+                {% if room.taken_by is not None %}
                 <p>This room has been taken by <b>{{ room.taken_by }}</b>.</p>
                 {% else %}
                 <p>This room is currently available for occupation.</p>
                 {% endif %}
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 text-center">
-                {% if room.taken %} <div class="alert alert-danger" role="alert"><h3>Unavailable</h3></div>
+                {% if room.taken_by is not None %} <div class="alert alert-danger" role="alert"><h3>Unavailable</h3></div>
                 {% else %} <div class="alert alert-success" role="alert"><h3>Available</h3></div>
                 {% endif %}
             </div>
